flux/apps/13ft/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thirteenft
  namespace: thirteenft
spec:
  entryPoints:
    - web
    - websecure
   routes:
     - match: Host(`13ft.misery.systems`)
       kind: Rule
       middlewares:
         - name: traefik-https-redirect
           namespace: traefik
       services:
         - name: thirteenft
           port: 5000
  tls:
    secretName: thirteenft-tls
---
apiVersion: v1
kind: Service
metadata:
  name: thirteenft
  namespace: thirteenft
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: thirteenft
